Month 2 button done

--- a/complex/projectPage02.html
+++ b/complex/projectPage02.html
@@ -101,100 +101,103 @@
                 </button>
               </p>
 
-              
-              <ul class="list-unstyled">
-                <li>JACASCRIPT.INFO
-                    <p>
-                      <b>
-                        The modern JavaScript Tutorial
-                      </b>
-                    </p>
-                  </li>
-                  <li>codecademy  
-                    <p>
-                      <b>
-                        Learn JavaScript
-                      </b>
-                    </p>
-                  </li>
-                  <li>eloquentjavascript.net  
-                    <p>
-                      <b>
-                        Eloquent JavaScript (3rd Edition)
-                      </b>
-                    </p>
-                  </li>                  
-                  <li>freeCodeCamp 
-                    <p>
-                      <b>
-                        A Gentler Introduction to Programming
-                      </b>
-                    </p>
-                  </li>
-                  <li>Frontend Masters  
-                    <p>
-                      <b>
-                        Introduction to JavaScript Programming
-                      </b>
-                    </p>
-                  </li>
-                  <li>Code School
-                    <p>
-                      <b>
-                        Learn JavaScript Online
-                      </b>
-                    </p>
-                  </li>
-                  <li>freeCodeCamp
-                    <p>
-                      <b> 
-                        reeCodeCamp Guide
-                      </b>
-                    </p>
-                  </li>
-                  <li>LearnCode.academy 
-                    <p>
-                      <b>
-                        JavaScript ES6 Cheatsheet - the best of JS ES6
-                      </b>
-                    </p>
-                  </li>
-                  <li>Code School 
-                    <p> 
-                      <b>
-                        Learn Git Online
-                      </b>
-                    </p>
-                  </li>
-                  <li>LearnCode.academy 
-                    <p>
-                      <b>
-                        Web Development 2018 - The Must-Know Tech
-                      </b>
-                    </p>
-                  </li>
-                  <li>jargon.js.org
-                    <p>
-                      <b>
-                        Simplified JS Jargon
-                      </b>
-                    </p>
-                  </li>
-                  <li>LearnCode.academy 
-                    <p>
-                      <b> 
-                        Web Development Tutorials For Beginners
-                      </b>
-                    </p>
-                  </li>
-                  <li>Frontend Masters 
-                    <p>
-                      <b> 
-                        Front-End Developer Handbook 2017
-                      </b>
-                    </p>
-                  </li>                    
-              </ul>     
+              <div class="collapse" id="collapseExample">
+                <div class="card card-body">
+                  <ul class="list-unstyled">
+                    <li>JACASCRIPT.INFO
+                        <p>
+                          <b>
+                            The modern JavaScript Tutorial
+                          </b>
+                        </p>
+                      </li>
+                      <li>codecademy  
+                        <p>
+                          <b>
+                            Learn JavaScript
+                          </b>
+                        </p>
+                      </li>
+                      <li>eloquentjavascript.net  
+                        <p>
+                          <b>
+                            Eloquent JavaScript (3rd Edition)
+                          </b>
+                        </p>
+                      </li>                  
+                      <li>freeCodeCamp 
+                        <p>
+                          <b>
+                            A Gentler Introduction to Programming
+                          </b>
+                        </p>
+                      </li>
+                      <li>Frontend Masters  
+                        <p>
+                          <b>
+                            Introduction to JavaScript Programming
+                          </b>
+                        </p>
+                      </li>
+                      <li>Code School
+                        <p>
+                          <b>
+                            Learn JavaScript Online
+                          </b>
+                        </p>
+                      </li>
+                      <li>freeCodeCamp
+                        <p>
+                          <b> 
+                            reeCodeCamp Guide
+                          </b>
+                        </p>
+                      </li>
+                      <li>LearnCode.academy 
+                        <p>
+                          <b>
+                            JavaScript ES6 Cheatsheet - the best of JS ES6
+                          </b>
+                        </p>
+                      </li>
+                      <li>Code School 
+                        <p> 
+                          <b>
+                            Learn Git Online
+                          </b>
+                        </p>
+                      </li>
+                      <li>LearnCode.academy 
+                        <p>
+                          <b>
+                            Web Development 2018 - The Must-Know Tech
+                          </b>
+                        </p>
+                      </li>
+                      <li>jargon.js.org
+                        <p>
+                          <b>
+                            Simplified JS Jargon
+                          </b>
+                        </p>
+                      </li>
+                      <li>LearnCode.academy 
+                        <p>
+                          <b> 
+                            Web Development Tutorials For Beginners
+                          </b>
+                        </p>
+                      </li>
+                      <li>Frontend Masters 
+                        <p>
+                          <b> 
+                            Front-End Developer Handbook 2017
+                          </b>
+                        </p>
+                      </li>                    
+                  </ul>
+                </div>
+              </div>     
           </div>
           <div class="col-md-8">
             <h3>How to exchange with the nocturnal light ?</h3>
