monthe 3 button finish

--- a/complex/projectPage03.html
+++ b/complex/projectPage03.html
@@ -98,86 +98,91 @@
                   Details About This Month's Coureses (By Order)
                 </button>
               </p>
-              
-              <ul class="list-unstyled">
-                <li>Code School
-                  <p>
-                    <b>
-                      Chrome Devtools Tutorial   
-                    </b>
-                  </p>
-                </li> 
-                <li>RisingStack 
-                  <p>
-                    <b>
-                      The Evolution of Asynchronous JavaScript
-                    </b>
-                  </p>
-                </li>
-                <li>JSConf 
-                  <p>
-                    <b>
-                      Philp Roberts: What the heck is the event loop anyway?
-                    </b>
-                  </p>
-                </li>
-                <li>JSConf 
-                  <p>
-                    <b>
-                      Anjana Vakil: Learning Functional Programming with JavaScript
-                    </b>
-                  </p>
-                </li>
-                <li>Fun Fun Function
-                  <p>
-                    <b>
-                      async / await in JavaScript - What, Why and How
-                    </b>
-                  </p>
-                </li>
-                <li>Frontend Masters 
-                  <p>
-                    <b>
-                      The Good Parts of JavaScript and the Web
-                    </b>
-                  </p>
-                </li>
-                <li>freeCodeCamp 
-                  <p>
-                    <b>
-                      JavaScript Modules: A Beginner's Guide 
-                    </b>
-                  </p>
-                </li>
-                <li>sitepoint
-                  <p>
-                    <b>
-                      A Beginner's Guide to npm - the Node Package Manager
-                    </b>
-                  </p>
-                </li>
-                <li>npm
-                  <p>
-                    <b>
-                      lodash
-                    </b>
-                  </p>
-                </li>
-                <li>Scotch 
-                  <p>
-                    <b>
-                      Getting Started with Browserify
-                    </b>
-                  </p>
-                </li>
-                <li>GitHub 
-                  <p>
-                    <b>
-                      GitHub Pages
-                    </b>
-                  </p>
-                </li>                    
-              </ul>     
+
+
+              <div class="collapse" id="collapseExample">
+                <div class="card card-body">
+                  <ul class="list-unstyled">
+                    <li>Code School
+                      <p>
+                        <b>
+                          Chrome Devtools Tutorial   
+                        </b>
+                      </p>
+                    </li> 
+                    <li>RisingStack 
+                      <p>
+                        <b>
+                          The Evolution of Asynchronous JavaScript
+                        </b>
+                      </p>
+                    </li>
+                    <li>JSConf 
+                      <p>
+                        <b>
+                          Philp Roberts: What the heck is the event loop anyway?
+                        </b>
+                      </p>
+                    </li>
+                    <li>JSConf 
+                      <p>
+                        <b>
+                          Anjana Vakil: Learning Functional Programming with JavaScript
+                        </b>
+                      </p>
+                    </li>
+                    <li>Fun Fun Function
+                      <p>
+                        <b>
+                          async / await in JavaScript - What, Why and How
+                        </b>
+                      </p>
+                    </li>
+                    <li>Frontend Masters 
+                      <p>
+                        <b>
+                          The Good Parts of JavaScript and the Web
+                        </b>
+                      </p>
+                    </li>
+                    <li>freeCodeCamp 
+                      <p>
+                        <b>
+                          JavaScript Modules: A Beginner's Guide 
+                        </b>
+                      </p>
+                    </li>
+                    <li>sitepoint
+                      <p>
+                        <b>
+                          A Beginner's Guide to npm - the Node Package Manager
+                        </b>
+                      </p>
+                    </li>
+                    <li>npm
+                      <p>
+                        <b>
+                          lodash
+                        </b>
+                      </p>
+                    </li>
+                    <li>Scotch 
+                      <p>
+                        <b>
+                          Getting Started with Browserify
+                        </b>
+                      </p>
+                    </li>
+                    <li>GitHub 
+                      <p>
+                        <b>
+                          GitHub Pages
+                        </b>
+                      </p>
+                    </li>                    
+                  </ul>
+                </div>
+              </div>  
           </div>
           <div class="col-md-8">
             <h3>How to exchange with the nocturnal light ?</h3>
