Set on month 4 button

--- a/complex/projectPage04.html
+++ b/complex/projectPage04.html
@@ -99,120 +99,125 @@
                 </button>
               </p>
               
-              <ul class="list-unstyled">
-                <li>LearnCode.academy
-                  <p>
-                    <b>
-                      REACT JS TUTORIAL    
-                    </b>
-                  </p>
-                </li> 
-                <li>egghead.io 
-                  <p>
-                    <b>
-                      The Beginner's Guide to ReactJS
-                    </b>
-                  </p>
-                </li>
-                <li>egghead.io
-                  <p>
-                    <b>
-                      Advanced React Component
-                    </b>
-                  </p>
-                </li>
-                <li>React
-                  <p>
-                    <b>
-                      Tutorial: Intro To React
-                    </b>
-                  </p>
-                </li>
-                <li>TYLERMCGINNIS.COM
-                  <p>
-                    <b>
-                      Courses for mastering the latest web technologies.
-                    </b>
-                  </p>
-                </li>
-                <li>btholt.github.io
-                  <p>
-                    <b>
-                      Complete Intro to React
-                    </b>
-                  </p>
-                </li>
-                <li>egghead.io
-                  <p>
-                    <b>
-                      Getting Started with Redux
-                    </b>
-                  </p>
-                </li>
-                <li>Redux
-                  <p>
-                    <b>
-                      Introduction
-                    </b>
-                  </p>
-                </li>
-                <li>GitHub
-                  <p>
-                    <b>
-                      Create React App
-                    </b>
-                  </p>
-                </li>
-                <li>Heroku Dev Center
-                  <p>
-                    <b>
-                      Deploying with Git
-                    </b>
-                  </p>
-                </li>
-                <li>Medium
-                  <p>
-                    <b>
-                      Today's most popular stories
-                    </b>
-                  </p>
-                </li>
-                <li>javascriptweekly.com
-                  <p>
-                    <b>
-                      JavaScript Weekly
-                    </b>
-                  </p>
-                </li>
-                <li>react.statuscode.com
-                  <p>
-                    <b>
-                      React Status
-                    </b>                    
-                  </p>
-                </li>
-                <li> freeCodeCamp
-                  <p>
-                    <b>
-                      An opinionated guide to writing developer resumes in 2017
-                    </b>
-                  </p>
-                </li>
-                <li>freeCodeCamp
-                  <p>
-                    <b>
-                      I spent 3 months applying to jobs after a coding boostcamp. Here's what I learned.
-                    </b>
-                  </p>                  
-                </li>
-                <li>Medium
-                  <p>
-                    <b>
-                      How to Interview, Land a job, and Get a Raise: An Unconventional Method for Programmers
-                    </b>
-                  </p>
-                </li>
-              </ul>       
+
+              <div class="collapse" id="collapseExample">
+                <div class="card card-body">
+                  <ul class="list-unstyled">
+                    <li>LearnCode.academy
+                      <p>
+                        <b>
+                          REACT JS TUTORIAL    
+                        </b>
+                      </p>
+                    </li> 
+                    <li>egghead.io 
+                      <p>
+                        <b>
+                          The Beginner's Guide to ReactJS
+                        </b>
+                      </p>
+                    </li>
+                    <li>egghead.io
+                      <p>
+                        <b>
+                          Advanced React Component
+                        </b>
+                      </p>
+                    </li>
+                    <li>React
+                      <p>
+                        <b>
+                          Tutorial: Intro To React
+                        </b>
+                      </p>
+                    </li>
+                    <li>TYLERMCGINNIS.COM
+                      <p>
+                        <b>
+                          Courses for mastering the latest web technologies.
+                        </b>
+                      </p>
+                    </li>
+                    <li>btholt.github.io
+                      <p>
+                        <b>
+                          Complete Intro to React
+                        </b>
+                      </p>
+                    </li>
+                    <li>egghead.io
+                      <p>
+                        <b>
+                          Getting Started with Redux
+                        </b>
+                      </p>
+                    </li>
+                    <li>Redux
+                      <p>
+                        <b>
+                          Introduction
+                        </b>
+                      </p>
+                    </li>
+                    <li>GitHub
+                      <p>
+                        <b>
+                          Create React App
+                        </b>
+                      </p>
+                    </li>
+                    <li>Heroku Dev Center
+                      <p>
+                        <b>
+                          Deploying with Git
+                        </b>
+                      </p>
+                    </li>
+                    <li>Medium
+                      <p>
+                        <b>
+                          Today's most popular stories
+                        </b>
+                      </p>
+                    </li>
+                    <li>javascriptweekly.com
+                      <p>
+                        <b>
+                          JavaScript Weekly
+                        </b>
+                      </p>
+                    </li>
+                    <li>react.statuscode.com
+                      <p>
+                        <b>
+                          React Status
+                        </b>                    
+                      </p>
+                    </li>
+                    <li> freeCodeCamp
+                      <p>
+                        <b>
+                          An opinionated guide to writing developer resumes in 2017
+                        </b>
+                      </p>
+                    </li>
+                    <li>freeCodeCamp
+                      <p>
+                        <b>
+                          I spent 3 months applying to jobs after a coding boostcamp. Here's what I learned.
+                        </b>
+                      </p>                  
+                    </li>
+                    <li>Medium
+                      <p>
+                        <b>
+                          How to Interview, Land a job, and Get a Raise: An Unconventional Method for Programmers
+                        </b>
+                      </p>
+                    </li>
+                  </ul>   
+                </div> 
+              </div>  
           </div>
           <div class="col-md-8">
             <h3>How to exchange with the nocturnal light ?</h3>
