--- a/complex/about.html
+++ b/complex/about.html
@@ -69,7 +69,7 @@
                     <img src="./assets/images/img-aboutme.jpg" class="img-responsive" alt=""> 
                 </div>
                 <div class="col-md-6">
-                    <h1 class="h2">Chang</h1>
+                    <h1 class="h2">Chang Hsi</h1>
                    
                       
                       <p>Mi eget mauris pharetra et ultrices neque ornare. Pellentesque elit ullamcorper dignissim cras tincidunt
