Month 4 React.js

--- a/complex/projectPage05.html
+++ b/complex/projectPage05.html
@@ -198,7 +198,7 @@
               </div>
           </div>
           <div class="col-md-8">
-            <h3>Sever, Data Base and connect all nodes </h3>
+            <h3>Sever, Data Base and connect all nodes in these five months</h3>
             <p>Id eu nisl nunc mi ipsum faucibus vitae aliquet. Auctor urna nunc id cursus metus aliquam. A pellentesque sit amet
               porttitor eget dolor morbi. Interdum varius sit amet mattis. Tincidunt dui ut ornare lectus sit amet est placerat
               in. Diam volutpat commodo sed egestas. Praesent elementum facilisis leo vel fringilla est ullamcorper eget nulla.
