Modified month 2 learning path

--- a/complex/projectPage02.html
+++ b/complex/projectPage02.html
@@ -90,8 +90,8 @@
                 <h3>Learning Path</h3>
                 <p> 10 Github's adding and commiting practicing per day</p>
                 <p> 1000 English Typing practice per day</p>
-                <p> 11 courses</p>
-                <p> 2 books</p>
+                <p> 11 Courses</p>
+                <p> 2 Books</p>
               </div>
 
               
