month 4 learn path detail

--- a/complex/projectPage04.html
+++ b/complex/projectPage04.html
@@ -87,10 +87,10 @@
           <div class="col-md-4">
               <div class="section-container-spacer">
                 <h3>Learning Path</h3>
-                <p> # English Typing practice per day</p>
-                <p> # Github practicing per day</p>
-                <p> # websites</p>
-                <p> # books</p>
+                <p> 10 Github's adding and commiting practicing per day</p>
+                <p> 1000 English Typing practice per day</p>
+                <p> 16 courses</p>
+                
               </div>
 
               <p>
