--- a/complex/projectPage04.html
+++ b/complex/projectPage04.html
@@ -87,9 +87,9 @@
           <div class="col-md-4">
               <div class="section-container-spacer">
                 <h3>Learning Path</h3>
-                <p> 10 Github's adding and commiting practicing per day</p>
-                <p> 1000 English Typing practice per day</p>
-                <p> 16 courses</p>
+                <p> 10 Github's adding and commiting per day</p>
+                <p> 1000 English word Typing per day</p>
+                <p> 16 Courses</p>
                 
               </div>
 
