month 2 learn path modified

--- a/complex/projectPage02.html
+++ b/complex/projectPage02.html
@@ -88,8 +88,8 @@
           <div class="col-md-4">
               <div class="section-container-spacer">
                 <h3>Learning Path</h3>
-                <p> 10 Github's adding and commiting practicing per day</p>
-                <p> 1000 English Typing practice per day</p>
+                <p> 10 Github's Adding & Commiting per day</p>
+                <p> 1000 English Word Typing per day</p>
                 <p> 11 Courses</p>
                 <p> 2 Books</p>
               </div>
