month 1 learning path modified

--- a/complex/projectPage01.html
+++ b/complex/projectPage01.html
@@ -88,8 +88,8 @@
               <div class="section-container-spacer">
                 <h3>Learning Path</h3>
 
-                <p> English typing practice 1000 words per day</p>
-                <p> 13+ courses</p>
+                <p> 1000 English Word Typing per day</p>
+                <p> 13+ Courses</p>
               </div>
 
               <p>
