--- a/complex/projectPage01.html
+++ b/complex/projectPage01.html
@@ -198,11 +198,7 @@
           </div>
           <div class="col-md-8">
             <h3> Big Picture</h3>
-            <p>Id eu nisl nunc mi ipsum faucibus  
-              vitae aliquet. Auctor urna nunc id cursus metus aliquam. A pellentesque sit amet
-              porttitor eget dolor morbi. Interdum varius sit amet mattis. Tincidunt dui ut ornare lectus sit amet est placerat
-              in. Diam volutpat commodo sed egestas. Praesent elementum facilisis leo vel fringilla est ullamcorper eget nulla.
-              Non odio euismod lacinia at quis risus sed vulputate. Lacus sed turpis tincidunt id aliquet risus feugiat.</p>
+            <p>How does Computer, Network and Internet work ? How could I built a webpage ? </p>
             <p> Mieget mauris pharetra et
               ultrices neque ornare. Pellentesque elit ullamcorper dignissim cras tincidunt lobortis.
               Euismod in pellentesque massa placerat. Consectetur libero id faucibus nisl tincidunt eget. Pulvinar etiam non
