month 1 tried to figure

--- a/complex/projectPage02.html
+++ b/complex/projectPage02.html
@@ -201,7 +201,9 @@
           </div>
           <div class="col-md-8">
             <h3>Javascript</h3>
-            <p>Tried To Figure: <b>How does JavaScript let machine do things I want ? </b></p>
+            <p>Tried To Figure :  
+              <b>How does JavaScript let machine doing things I wanted ? </b>
+            </p>
 
             <p> Mieget mauris pharetra et
             ultrices neque ornare. Pellentesque elit ullamcorper dignissim cras tincidunt lobortis.
