--- a/complex/projectPage01.html
+++ b/complex/projectPage01.html
@@ -198,7 +198,9 @@
           </div>
           <div class="col-md-8">
             <h3> Big Picture</h3>
-            <p>How does Computer, Network and Internet work ? How could I built a webpage ? </p>
+            <p>Tried To Figure : 
+              <b>How does Computer, Network and Internet work ? How could I built a webpage ?</b> 
+            </p>
             <p> Mieget mauris pharetra et
               ultrices neque ornare. Pellentesque elit ullamcorper dignissim cras tincidunt lobortis.
               Euismod in pellentesque massa placerat. Consectetur libero id faucibus nisl tincidunt eget. Pulvinar etiam non
