--- a/complex/projectPage03.html
+++ b/complex/projectPage03.html
@@ -185,7 +185,7 @@
           </div>
           <div class="col-md-8">
             <h3>JavaScript  + NPM + Build My Own Webpage</h3>
-            <p>Try To Figure :
+            <p>Tried To Figure :
               <b>Can I build my professional webpage and know the whole progress ? </b>
             </p>
             <p> Mieget mauris pharetra et ultrices neque ornare. Pellentesque elit ullamcorper dignissim cras tincidunt lobortis.
