learing detail location modified

--- a/complex/projectPage01.html
+++ b/complex/projectPage01.html
@@ -199,7 +199,9 @@
           <div class="col-md-8">
             <h3> Big Picture</h3>
             <p>Tried To Figure : 
-              <b>How does Computer, Network and Internet work ? How could I built a webpage ?</b> 
+              <b>
+                How does Computer, Network and Internet work ? How could I built a webpage ?
+              </b> 
             </p>
             <p> Mieget mauris pharetra et
               ultrices neque ornare. Pellentesque elit ullamcorper dignissim cras tincidunt lobortis.
