--- a/complex/projectPage02.html
+++ b/complex/projectPage02.html
@@ -202,7 +202,9 @@
           <div class="col-md-8">
             <h3>Javascript</h3>
             <p>Tried To Figure :  
-              <b>How does JavaScript let machine doing things I wanted ? </b>
+              <b>
+                How does JavaScript let machine doing things I wanted ? 
+              </b>
             </p>
 
             <p> Mieget mauris pharetra et
