--- a/complex/projectPage03.html
+++ b/complex/projectPage03.html
@@ -186,7 +186,9 @@
           <div class="col-md-8">
             <h3>JavaScript  + NPM + Build My Own Webpage</h3>
             <p>Tried To Figure :
-              <b>Can I build my professional webpage and know the whole progress ? </b>
+              <b>
+                Can I build my professional webpage and know the whole progress ? 
+              </b>
             </p>
             <p> Mieget mauris pharetra et ultrices neque ornare. Pellentesque elit ullamcorper dignissim cras tincidunt lobortis.
             Euismod in pellentesque massa placerat. Consectetur libero id faucibus nisl tincidunt eget. Pulvinar etiam non
