--- a/complex/projectPage04.html
+++ b/complex/projectPage04.html
@@ -221,7 +221,7 @@
           </div>
           <div class="col-md-8">
             <h3>React.js </h3>
-            <p>Try To Figure : 
+            <p>Tried To Figure : 
               <b>
                 What's problem can React or Vue solve ?
               </b>
