--- a/complex/projectPage05.html
+++ b/complex/projectPage05.html
@@ -199,15 +199,17 @@
           </div>
           <div class="col-md-8">
             <h3>Sever, Data Base and connect all nodes in these five months</h3>
-            <p>Id eu nisl nunc mi ipsum faucibus vitae aliquet. Auctor urna nunc id cursus metus aliquam. A pellentesque sit amet
-              porttitor eget dolor morbi. Interdum varius sit amet mattis. Tincidunt dui ut ornare lectus sit amet est placerat
-              in. Diam volutpat commodo sed egestas. Praesent elementum facilisis leo vel fringilla est ullamcorper eget nulla.
-              Non odio euismod lacinia at quis risus sed vulputate. Lacus sed turpis tincidunt id aliquet risus feugiat.</p>
-              <p> Mieget mauris pharetra et ultrices neque ornare. Pellentesque elit ullamcorper dignissim cras tincidunt lobortis.
-              Euismod in pellentesque massa placerat. Consectetur libero id faucibus nisl tincidunt eget. Pulvinar etiam non
-              quam lacus suspendisse. Tincidunt nunc pulvinar sapien et ligula ullamcorper malesuada. Ante in nibh mauris cursus
-              mattis molestie a iaculis. Gravida cum sociis natoque penatibus et magnis dis parturient montes. Ultrices gravida
-              dictum fusce ut placerat orci. Id cursus metus aliquam eleifend mi in. Odio eu feugiat pretium nibh ipsum consequat.
+            <p>
+              Tried To Figure : 
+              <b>
+                Which part does Server, Data base, and Raspberry could suit of ?      
+              </b>
+            </p>
+            <p> Mieget mauris pharetra et ultrices neque ornare. Pellentesque elit ullamcorper dignissim cras tincidunt lobortis.
+            Euismod in pellentesque massa placerat. Consectetur libero id faucibus nisl tincidunt eget. Pulvinar etiam non
+            quam lacus suspendisse. Tincidunt nunc pulvinar sapien et ligula ullamcorper malesuada. Ante in nibh mauris cursus
+            mattis molestie a iaculis. Gravida cum sociis natoque penatibus et magnis dis parturient montes. Ultrices gravida
+            dictum fusce ut placerat orci. Id cursus metus aliquam eleifend mi in. Odio eu feugiat pretium nibh ipsum consequat.
             </p>
           </div>
         </div>
