month4 first pic

--- a/complex/projectPage04.html
+++ b/complex/projectPage04.html
@@ -63,7 +63,7 @@
 </header>
 
   
-<div class="hero-full-container background-image-container white-text-container" style="background-image:url('./assets/images/img-08.jpg')">
+<div class="hero-full-container background-image-container white-text-container" style="background-image:url('./assets/images/jstips-animation.gif')">
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
