month 1 cs50 pic

--- a/complex/projectPage01.html
+++ b/complex/projectPage01.html
@@ -206,8 +206,8 @@
                     
 
 
-        <img src="./assets/images/img-03.jpg" alt="" class="img-responsive">
-        <p>Menphis city center</p>
+        <img src="./assets/images/img-10.jpg" alt="" class="img-responsive">
+        <p>CS50 Lectures 2017</p>
 
         <blockquote class="text-center large-spacing">
             <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante."</p>
