--- a/complex/projectPage01.html
+++ b/complex/projectPage01.html
@@ -225,8 +225,8 @@
             </div>
         </div>
 
-        <img src="./assets/images/img-04.jpg" class="img-responsive" alt="">
-        <p>Menphis skyline</p>
+        <img src="./assets/images/img-11.jpg" class="img-responsive" alt="">
+        <p>Crash Course Computer Science - Geek Gurl Diaries</p>
 
       </div>
     </div>
