month2 pic adding

--- a/complex/projectPage02.html
+++ b/complex/projectPage02.html
@@ -211,8 +211,8 @@
                              
 
 
-        <img src="./assets/images/img-03.jpg" alt="" class="img-responsive">
-        <p>Menphis city center</p>
+        <img src="./assets/images/img-14.jpg" alt="" class="img-responsive">
+        <p>The Modern JavaScript Tutorial</p>
 
         <blockquote class="text-center large-spacing">
             <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante."</p>
