Eloquent JavaScript 3rd pic adding month 2

--- a/complex/projectPage02.html
+++ b/complex/projectPage02.html
@@ -221,8 +221,8 @@
         
         <div class="row">
             <div class="col-md-6">
-            <img src="./assets/images/img-02.jpg" class="img-responsive" alt="">
-            <p>Menphis skyline</p>
+            <img src="./assets/images/img-15.jpg" class="img-responsive" alt="">
+            <p>Eloquent JavaScript 3rd Edition - Marjin Haverbeke</p>
             </div>
             <div class="col-md-6">
             <img src="./assets/images/img-01.jpg" class="img-responsive" alt="">
