month 2  Frontend Masters pic

--- a/complex/projectPage02.html
+++ b/complex/projectPage02.html
@@ -220,13 +220,13 @@
         </blockquote>
         
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 col-xs-6">
             <img src="./assets/images/img-15.jpg" class="img-responsive" alt="">
             <p>Eloquent JavaScript 3rd Edition - Marjin Haverbeke</p>
             </div>
-            <div class="col-md-6">
-            <img src="./assets/images/img-01.jpg" class="img-responsive" alt="">
-            <p>Artefact Buildging</p>
+            <div class="col-md-6 col-xs-6">
+            <img src="./assets/images/img-16.jpg" class="img-responsive" alt="">
+            <p>Front-End Developer Handbook 2017 - Frontend Masters</p>
             </div>
         </div>
 
