--- a/complex/projectPage01.html
+++ b/complex/projectPage01.html
@@ -216,8 +216,8 @@
         
         <div class="row">
             <div class="col-md-6">
-            <img src="./assets/images/img-13.jpg" class="img-responsive" alt="">
-            <p>Menphis skyline</p>
+            <img src="./assets/images/img-17.jpg" class="img-responsive" alt="">
+            <p>Tried to familiar with English typing</p>
             </div>
             <div class="col-md-6">
             <img src="./assets/images/img-12.jpg" class="img-responsive" alt="">
