month 2 started to build my own page

--- a/complex/projectPage02.html
+++ b/complex/projectPage02.html
@@ -230,8 +230,8 @@
             </div>
         </div>
 
-        <img src="./assets/images/img-04.jpg" class="img-responsive" alt="">
-        <p>Menphis skyline</p>
+        <img src="./assets/images/img-13.jpg" class="img-responsive" alt="">
+        <p>Started to build my own page</p>
 
       </div>
     </div>
