--- a/complex/projectPage01.html
+++ b/complex/projectPage01.html
@@ -14,7 +14,7 @@
   
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
   
-  <title>Project page</title>  
+  <title>First Month</title>  
 
 <link href="./main.3da94fde.css" rel="stylesheet"></head>
 
