--- a/complex/projectPage05.html
+++ b/complex/projectPage05.html
@@ -15,7 +15,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
   
   
-  <title>Project page</title>  
+  <title>Fifth Month</title>  
 
 <link href="./main.3da94fde.css" rel="stylesheet"></head>
 
