Home page message modified

--- a/complex/Home.html
+++ b/complex/Home.html
@@ -69,8 +69,7 @@
         <div class="hero-full-wrapper">
           <div class="text-content">
             <h1>Chang Hsi</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p> JavaScript's Five Month Learning Recording </p>
           </div>
         </div>
       </div>
