--- a/complex/aboutme.html
+++ b/complex/aboutme.html
@@ -35,7 +35,7 @@
       <nav class="navbar-fullscreen" id="navbar-middle">
         <button type="button" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <ul class="navbar-fullscreen-links">
-          <li><a href="./index.html" title="">Home</a></li>
+          <li><a href="./home.html" title="">Home</a></li>
           <li><a href="./projectPage01.html" title="">Project</a></li>
           <li><a href="./about.html" title="">About me</a></li>
         </ul>
