aboutme link modified

--- a/complex/aboutme.html
+++ b/complex/aboutme.html
@@ -37,7 +37,7 @@
         <ul class="navbar-fullscreen-links">
           <li><a href="./home.html" title="">Home</a></li>
           <li><a href="./month01.html" title="">Project</a></li>
-          <li><a href="./about.html" title="">About me</a></li>
+          <li><a href="./aboutme.html" title="">About me</a></li>
         </ul>
 
         <div class="footer-container">
