--- a/complex/month02.html
+++ b/complex/month02.html
@@ -243,14 +243,14 @@
       <div class="col-xs-12 text-center">
         <ul class="navbar-nav nav">
           <li>
-            <a href="./projectPage01.html" title="" class="project-nav left"><span class="project-number">01</span>Previous</a>
+            <a href="./month01.html" title="" class="project-nav left"><span class="project-number">01</span>Previous</a>
           </li>
         </ul>
         <p class="h5 navbar-text">Second Month <i class="fa fa-chevron-down arrow-down" aria-hidden="true"></i></p>
 
         <ul class="navbar-nav nav navbar-right">
           <li>
-            <a href="./projectPage03.html" title="" class="project-nav right"><span class="project-number">03</span>Next </a>
+            <a href="./month03.html" title="" class="project-nav right"><span class="project-number">03</span>Next </a>
           </li>
         </ul>
       </div>
