--- a/complex/month03.html
+++ b/complex/month03.html
@@ -225,14 +225,14 @@
       <div class="col-xs-12 text-center">
         <ul class="navbar-nav nav">
           <li>
-            <a href="./projectPage02.html" title="" class="project-nav left"><span class="project-number">02</span>Previous</a>
+            <a href="./month02.html" title="" class="project-nav left"><span class="project-number">02</span>Previous</a>
           </li>
         </ul>
         <p class="h5 navbar-text"> Third Month <i class="fa fa-chevron-down arrow-down" aria-hidden="true"></i></p>
 
         <ul class="navbar-nav nav navbar-right">
           <li>
-            <a href="./projectPage04.html" title="" class="project-nav right"><span class="project-number">04</span>Next </a>
+            <a href="./month04.html" title="" class="project-nav right"><span class="project-number">04</span>Next </a>
           </li>
         </ul>
       </div>
