--- a/complex/month01.html
+++ b/complex/month01.html
@@ -15,7 +15,9 @@
   
   <title>First Month</title>  
 
-<link href="./main.3da94fde.css" rel="stylesheet"></head>
+  <link href="./main.3da94fde.css" rel="stylesheet">
+</head>
+
 
 <body>
 
