month03.html style modified

--- a/complex/month03.html
+++ b/complex/month03.html
@@ -196,19 +196,19 @@
         <p>Menphis city center</p>
 
         <blockquote class="text-center large-spacing">
-            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante."</p>
-            <small class="pull-right">Irina Martin</small>
+          <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante."</p>
+          <small class="pull-right">Irina Martin</small>
         </blockquote>
         
         <div class="row">
-            <div class="col-md-6">
+          <div class="col-md-6">
             <img src="./assets/images/img-02.jpg" class="img-responsive" alt="">
             <p>Menphis skyline</p>
             </div>
             <div class="col-md-6">
             <img src="./assets/images/img-01.jpg" class="img-responsive" alt="">
             <p>Artefact Buildging</p>
-            </div>
+          </div>
         </div>
 
         <img src="./assets/images/img-04.jpg" class="img-responsive" alt="">
@@ -251,6 +251,7 @@
       navActivePage();
     });
 </script>
- <script type="text/javascript" src="./main.4c6e144e.js"></script></body>
+ <script type="text/javascript" src="./main.4c6e144e.js"></script>
+</body>
 
 </html>
