month02 details adding one book

--- a/complex/month02.html
+++ b/complex/month02.html
@@ -192,7 +192,14 @@
                             Front-End Developer Handbook 2017
                           </b>
                         </p>
-                      </li>                    
+                      </li>
+                      <li>Frontend Masters 
+                        <p>
+                          <b> 
+                            Front-End Developer Handbook 2018
+                          </b>
+                        </p>
+                      </li>                      
                   </ul>
                 </div>
               </div>     
