--- a/complex/Home.html
+++ b/complex/Home.html
@@ -17,7 +17,8 @@
   
   <title>Home</title>  
 
-<link href="./main.3da94fde.css" rel="stylesheet"></head>
+  <link href="./main.3da94fde.css" rel="stylesheet">
+</head>
 
 <body>
 
