--- a/complex/Home.html
+++ b/complex/Home.html
@@ -89,6 +89,7 @@
       navActivePage();
     });
 </script>
- <script type="text/javascript" src="./main.4c6e144e.js"></script></body>
+ <script type="text/javascript" src="./main.4c6e144e.js"></script>
+</body>
 
 </html>
