aboutme.html style modified

--- a/complex/aboutme.html
+++ b/complex/aboutme.html
@@ -17,7 +17,8 @@
   
   <title>About Me</title>  
 
-<link href="./main.3da94fde.css" rel="stylesheet"></head>
+  <link href="./main.3da94fde.css" rel="stylesheet">
+</head>
 
 <body>
 
