--- a/complex/month01.html
+++ b/complex/month01.html
@@ -273,6 +273,7 @@
       navActivePage();
     });
 </script>
- <script type="text/javascript" src="./main.4c6e144e.js"></script></body>
+ <script type="text/javascript" src="./main.4c6e144e.js"></script>
+</body>
 
 </html>
