month03.html style modified

--- a/complex/month03.html
+++ b/complex/month03.html
@@ -17,7 +17,8 @@
   
   <title>Third Month</title>  
 
-<link href="./main.3da94fde.css" rel="stylesheet"></head>
+  <link href="./main.3da94fde.css" rel="stylesheet">
+</head>
 
 <body>
 
